Add access log API endpoints
